Mon May 21 15:46:23 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/DomainApplicationManager/Task_StartLaunch.h:

          Included ACE configuration header file to fix the warnigns
          on the VxWorks5.5.1_x86_GCC2.96_Exceptions build.

Sat May 19 15:59:08 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/Deployment/NodeApp_CB_Impl.cpp:
        * DAnCE/Deployment/NodeApp_CB_Impl.h:
        
          Moved #include "ace/config-all.h" from .h file to 
          the .cpp file since otherwise the #if defined (ACE_HAS_THREADS)
          cannot be evaluated properly.

Fri May 18 13:46:13 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/Deployment/NodeApp_CB_Impl.cpp:

          Added #if defined (ACE_HAS_THREADS) to prevent build error
          of single_threaded build.

Thu May 17 19:53:02 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/DomainApplicationManager/Task_StartLaunch.cpp:
        * DAnCE/DomainApplicationManager/Task_StartLaunch.h:

          Added this new class which serves as an active object when
          performing startLaunch.

        * DAnCE/DomainApplicationManager/DomainApplicationManager_ActiveObject_Impl.cpp:
        * DAnCE/DomainApplicationManager/DomainApplicationManager_ActiveObject_Impl.h:
        
          This implementation of DomainApplicationManager is a subclass
          of standard implementation of DomainaApplicationManager but
          uses an active object based approach to handle deployment,
          which essentially spawns a number of threads wich each 
          correponds to one node.
        
        * DAnCE/DomainApplicationManager/DomainApplicationManager.mpc:

          Added the above new classes into the project file
        
        * DAnCE/ExecutionManager/Execution_Manager.cpp:
        * DAnCE/ExecutionManager/Execution_Manager_Impl.cpp:
        * DAnCE/ExecutionManager/Execution_Manager_Impl.h:
        