@@ -1,3 +1,10 @@
+Wed May 23 02:21:30 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>
+
+        * DAnCE/Deployment/NodeApp_CB_Impl.h:
+        
+          Added back #if defined (ACE_HAS_THREADS) macro to 
+          fix error in single_threaded build.
+
 Mon May 21 15:46:23 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>
 
         * DAnCE/DomainApplicationManager/Task_StartLaunch.h:
